<resources>
    <string name="app_name">MyNotes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="message_undo">Undo delete ?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_cancel">Do you wanna cancel changes in form ?</string>
    <string name="message_delete">you sure wanna delete these item ?</string>
    <string name="added">One Notes Succesfully Added</string>
    <string name="changed">One Notes Succesfully Updated</string>
    <string name="deleted">Notes Succesfully Deleted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="login_here">Login Here</string>
    <string name="login">Login</string>
    <string name="not_yet_have_account">Not Yet Have Account ?</string>
    <string name="register_here">Register Here</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="delete_data">Delete Data</string>
    <string name="woman">Woman</string>
    <string name="update_data">Update Data</string>
    <string name="man">Man</string>
    <string name="add_notes">ADD NOTES</string>
    <string name="attach_file">Attach File</string>
    <string name="input_notes">Input Notes</string>
    <string name="welcome">Welcome,</string>
    <string name="secret_notes">Secret Notes</string>
</resources>