<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.FragmentRegister"
        android:background="#D3D2D2"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="100dp"
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivRegister"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/tvRegister"
                android:layout_centerHorizontal="true"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRegistUsername"
                android:layout_centerHorizontal="true"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tvRegister"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginTop="100dp">

                <EditText
                    android:id="@+id/edtUsername"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvRegister"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:background="@null"
                    android:inputType="text|textNoSuggestions" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFullName"
                android:layout_centerHorizontal="true"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/cvRegistUsername"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtEmail"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/cvRegistUsername"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:background="@null"
                    android:inputType="text|textNoSuggestions" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPasswordRegist"
                android:layout_centerHorizontal="true"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/cvFullName"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtPassword"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/cvFullName"
                    android:gravity="center"
                    android:background="@null"
                    android:textSize="14sp"
                    />

                <ImageView
                    android:id="@+id/ivEye"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_eye"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvRepeatPassword"
                android:layout_centerHorizontal="true"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@+id/cvPasswordRegist"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtRepeatPassword"
                    android:hint="@string/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/cvPasswordRegist"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:background="@null" />

                <ImageView
                    android:id="@+id/ivEyeConfirm"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_eye"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMan"
                android:layout_marginTop="20dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:elevation="20dp"
                app:cardCornerRadius="15dp"
                android:layout_below="@+id/cvRepeatPassword"
                android:layout_marginLeft="130dp"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/man"
                    android:layout_gravity="center"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvWoman"
                android:layout_marginTop="20dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:elevation="20dp"
                app:cardCornerRadius="15dp"
                android:layout_below="@+id/cvRepeatPassword"
                android:layout_toRightOf="@id/cvMan"
                android:layout_marginLeft="20dp"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/woman"
                    android:layout_gravity="center"
                    />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnRegister"
                android:backgroundTint="#AFA4A4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/viewLine"
                android:layout_centerHorizontal="true"
                android:text="@string/register" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:background="#fff" />

            <TextView
                android:id="@+id/tvAlreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_toLeftOf="@+id/tvLogin"
                android:text="@string/already_have_account"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="@string/login_here"
                android:textSize="15sp" />

        </RelativeLayout>

    </FrameLayout>
</layout>